--- a/templates/admindasboard.html
+++ b/templates/admindasboard.html
@@ -13,7 +13,7 @@
 
     
 
-    <link href="/assets/css/dasboard.css" rel="stylesheet">
+    <link href="/assets/css/dasboard.css?v=1.1" rel="stylesheet">
     <script src="/assets/htmx.js"></script>
 
     </head>
@@ -32,7 +32,7 @@
           </ul>
       </div>
   </div>
-
+ 
 
   <div class="side_bar">
       <ul class="side_ul">
@@ -79,7 +79,7 @@
                         </ul>
                         <div class="bottom-details">
                             <p>Students: <span>Number</span> </p>
-                            <a href="">Details</a>
+                            <div class="btn2"><a href="">Details</a></div>
                         </div>
                     </div>
                     <div class="programcard">
