--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,10 @@
 {{define "Header"}}
 
 
-<link rel="stylesheet" href="/assets/css/navbar.css?v=1.1">
+<link rel="stylesheet" href="/assets/css/navbar.css?v=1.13">
+<link rel="stylesheet" href="/assets/css/headercss.css?v=1.14">
 
-
-<div class="header">
+<div class="header_size">
   <div class="ucms-header">
       <h1>University College Of Metaphysical Sciences</h1>
   </div>
