--- a/assets/css/confirmenroll.css
+++ b/assets/css/confirmenroll.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-image: url(/assets/Images/home_page_three.png);
+    background-image: url(home_page_three.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment:fixed;
@@ -29,19 +29,33 @@ body{
 
 .btn1{
     width: 150px;
-    height: 40px;
+    height: 35px;
     font-size: 1.2em;
     background-color: rgb(37, 0, 62);
     border: 1px solid rgb(37, 0, 62);
     border-radius: 2px;
     color: white;
     text-decoration: none;
+    padding-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .btn1:hover{
     background-color: white;
+    
+}
+
+.btn1:hover a{
     color: rgb(37, 0, 62);
 }
+
+.btn1 a{
+    text-decoration: none;
+    color: white;
+}
+
+
 
 .btn1:active{
     background-color: rgb(37, 0, 62);
