--- a/assets/css/dasboard.css
+++ b/assets/css/dasboard.css
@@ -24,7 +24,7 @@
     left: 0;
     height: 100vh;
     width: 20%;
-    background-color: rgba(37, 0, 62.8);
+    background-color: rgba(37, 0, 62, .8);
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.2);
     flex-direction: column;
     color: black;
@@ -119,8 +119,8 @@
     width: 95%;
     margin: 3px 10px;
     height: 40px;
-    background-color: rgb(45, 7, 50);
-    border: 1px solid black;
+    background-color: rgb(60, 27, 83);
+    border: 1px solid rgb(190, 179, 197);
     border-radius: 3px;
     
 
@@ -166,14 +166,14 @@
 
 
 .bottom-details{
-    background-color: blueviolet;
+    background-color:  rgba(37, 0, 62, .8);
     position: static;
     top: 0;
     width: 100%;
     height: 100px;
     justify-content: left;    
     padding: 5px;
-    border: 1px solid blueviolet;
+    border: 1px solid  rgb(37, 0, 62);
     border-radius: 3px;
 }
 
@@ -183,24 +183,34 @@
     text-align: left;
 }
 
-.bottom-details a{
+.btn2{
     background-color: white;
-    color: black;
-    text-decoration: none;
-    display: block;
-    width: 100%;
+    padding-top: 5px;
+    width: 50%;
     height: 40px;
+    margin-left: auto;
+    margin-right: auto;
     text-anchor: middle;
-    border: 1px solid black;
+    border: 1px solid rgb(37, 0, 62);
     border-radius: 3px;
-    background-color: blueviolet;
+    background-color:  rgb(37, 0, 62);
     
 
 }
 
-.bottom-details a:hover{
+.btn2:hover{
     background-color: white;
-    color: blueviolet;
+    color: rgb(37, 0, 62);
+}
+
+.btn2 a{
+    text-decoration: none;
+    color: white;
+}
+
+.btn2:hover a{
+    background-color: white;
+    color:  rgb(37, 0, 62);
 }
 
 
