--- a/assets/css/formstyletwo.css
+++ b/assets/css/formstyletwo.css
@@ -8,7 +8,7 @@
 
 .heading{
     text-align: center;
-    color: rgb(45, 7, 50);
+    color: rgb(37, 0, 62);
 }
 
 
@@ -45,6 +45,7 @@
 
 }
 
+
 .logdiv input{
     width: 400px;
     margin-bottom: 10px;
@@ -67,15 +68,20 @@
     width: 100px;
     height: 40px;
     color: white;
-    border: 2px solid rgb(45, 7, 50);
+    border: 2px solid rgb(37, 0, 62);
     border-radius: 3px;
-    background-color: rgb(45, 7, 50);
+    background-color: rgb(37, 0, 62);
     font-family: Custom-one;
+}
+
+.ctsubbtn:hover {
+    background-color: white;
+    color:rgb(37, 0, 62);
 }
 
 .ctlabel{
     font-size: 1.3em;
-    color: rgb(45, 7, 50);
+    color: rgb(37, 0, 62);
     
 }
 
@@ -86,13 +92,13 @@
 
 
 a {
-    color: rgb(45, 7, 50);
+    color: rgb(37, 0, 62);
     font-family: Custom-one;
 
 }
 
 a:active{
-    color: rgb(45, 7, 50);
+    color: rgb(37, 0, 62);
 }
 
 @media screen and (max-width: 800px){
