--- a/assets/css/headercss.css
+++ b/assets/css/headercss.css
@@ -1,5 +1,6 @@
-.width-div{
-    background-color: rgb(45, 7, 50);
+.header_size{
+    background-color: rgb(37, 0, 62);
     width: 100%;
-    height: 230px;
+    height: 190px;
+    padding-top: 35px;
 }
