--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -6,7 +6,7 @@
 
 
 .header{
-    background-color: rgb(45, 7, 50);
+    background-color: rgb(37, 0, 62);
     width: 100%;
     height: 20%;
     overflow: hidden;
@@ -28,7 +28,7 @@
 }
 
 nav{
-    background-color: rgb(45, 7, 50);
+    background-color: rgb(37, 0, 62);
     box-shadow: 3px 3px 3px 5px rgb(0,0,0,0.1);
     position: sticky;
     top: 0px;
@@ -69,7 +69,7 @@ nav a:hover{
     height: 100vh;
     width: 250px;
     z-index: 999;
-    background-color: rgba(37, 0, 62 .8);
+    background-color: rgba(37, 0, 62, .8);
     backdrop-filter: blur(20px);
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.2);
     display: none;
@@ -98,7 +98,7 @@ nav a:hover{
     height: 200px;
     width: 100px;
     z-index: 999;
-    background-color: rgba(37, 0, 62 .8);
+    background-color: rgba(37, 0, 62, .8);
     backdrop-filter: blur(20px);
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.2);
     display: none;
