--- a/templates/enrollstudent.html
+++ b/templates/enrollstudent.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enrollment</title>
-    <link href="/assets/css/formstyle.css?v=1.2" rel="stylesheet">
+    <link href="/assets/css/formstyle.css?v=1.4" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 
     <style>
         body{
@@ -12,15 +13,18 @@
             background-repeat: no-repeat;
             background-size: 100% 100%;
             background-attachment:fixed;
+           
+
             margin: auto;
         }
     </style>
     
 </head>
 <body>
-    <div>
-        <a href="/"><h1 class="heading">UCMS</h1></a>
-    </div>
+    
+    {{ template "Header"}}
+    
+    
 
     <div class="form_div">
         <h2>Student Details</h1>
