--- a/templates/confirmenroll.html
+++ b/templates/confirmenroll.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmation</title>
-    <link rel="stylesheet" href="confirmenroll.css">
+    <link rel="stylesheet" href="/assets/css/confirmenroll.css">
     <script src="/assets/htmx.js"></script>
+    <style>
+        body{
+        background-image: url(/assets/Images/home_page_three.jpg);
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-attachment:fixed;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+    </style>
 
 </head>
 <body>
     <div class="mainbox">
         <h1 class="headertext">Submited</h1>
         <div class="checkmark">
-            <img src="check_purple.png" alt="check_purple">
+            <img src="/assets/Images/check_purple.png" alt="check_purple">
         </div>
         <p>Congratulations your form has been submited succefully. An email will be sent to you usings the email you used to complete your enrollment. You are adviced to return to our home page to learn more about the program you have applied for.</p>
         <div class="btn1"><a href="/">Home</a></div>
