--- a/templates/index.html
+++ b/templates/index.html
@@ -53,8 +53,29 @@
             </p>
           
       </div>
-        </div>
+
+      <div class="col-sm-8 py-5 mx-auto">
+        <h1 class="display-5 fw-normal">Our Vision</h1>
+      
+        <P class="fs-5">To awaken humanity to understand their purpose and mission on Earth through pursuit of Knowledge, Research and Innovation. </p>
+
+        <h1>OUR Mission</h1>
+        <p class="fs-5">To provide relevant tertiary education to all those seeking to be enlightened.</p>
+
+        <h1>CORE Values</h1>
+        <ul>
+          <li> Alternative thinking</li>
+          <li> Academic Freedom</li>
+          <li> Integrity</li>
+          <li> Innovativeness</li>
+          <li> Excellence</li>
+          <li> Honesty</li>
+          <li> Fairness</li>
+          <li> equity</li>
+        </ul>
       </div>
+      </div>
+    </div>
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
 
 </body>
