--- a/assets/css/dasboard.css
+++ b/assets/css/dasboard.css
@@ -12,7 +12,8 @@
     position: static;
     background-color: rgb(37, 0, 62);
     width: 100%;
-    height: 160px;
+    height: 150px;
+    padding: 15px;
     
     
 }
@@ -27,7 +28,6 @@
     background-color: rgba(37, 0, 62, .8);
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.2);
     flex-direction: column;
-    color: black;
     align-items: center;
     justify-content: flex-start;
     box-sizing: border-box;
@@ -285,3 +285,23 @@
     background-color: aqua;
 
 }
+
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(37, 0, 62);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: pink;
+  }
