--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/aboutus.css">
+    <link rel="stylesheet" href="/assets/css/aboutus.css?v=1.2">
     <style>
         body{
         background-image: url('assets/Images/home_page_three.png');
