--- a/assets/css/dasboard.css
+++ b/assets/css/dasboard.css
@@ -49,7 +49,7 @@
 
 }
 
-#maincontaint{
+.table_div{
     overflow-x: scroll;
     overflow-y: visible;
 }
@@ -242,4 +242,46 @@
     background-color: red;
     width: 100px;
     height: 50px;
+}
+
+.tableheader{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    color: rgb(37, 0, 62);
+    width: 100%;
+    height: 30%;
+    background-color: rgb(78, 50, 97);
+    border: 1px solid rgb(78, 50, 97);
+    border-radius: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.programname{
+    display: inline;
+    color:white;
+    font-size: 1.2em;
+    position: relative;
+    right: 0px;
+    top: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.programnamelist{
+    display: inline;
+    width: 150px;
+    height: 30px;
+    border: 1px solid gray;
+    border-radius: 3px;
+    position: relative;
+    right: 0px;
+    top: 10px;
+    justify-self: end;
+    text-align: center;
+}
+
+.customesize{
+    background-color: aqua;
+
 }
