--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -119,6 +119,7 @@ nav a:hover{
 .dropdown-list:hover .dropdown-menu{
         display: flex;
         position: relative;
+        width: 200px;
 
 }
 
