--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/login.css?v=1.0">
 
     <title>Student Login</title>
     <style>
@@ -20,10 +21,11 @@
           border-radius: 5px;
         }
         .log_div{
-            width: 35%;
+            width: 40vw;
             height: 65%;
             margin-top: 12%;
-            margin-left: 34.5%;
+            margin-left: auto;
+            margin-right: auto;
             text-align: center;
             background-color: rgba(251, 251, 251, .8);
             border-radius: 5px;
@@ -31,8 +33,8 @@
             border-width: 1px;
             border-color:  rgba(251, 251, 251, .8);
             padding: 10px;
-            position: absolute;
-            display: flow-root;
+            position: relative;
+            
 
 
         }
@@ -66,7 +68,12 @@
             cursor: pointer;
         }
 
-
+        @media(max-width: 850px){
+          .log_div{
+              width: 80%;
+          }
+          
+      }
 
 
 
@@ -100,18 +107,18 @@
         <div>
             <a class="header-link" href="/"><h4>UCMS</h4></a>
         </div>
-        <form>
+        <form  action="/confirmlogin" method="POST" >
             <!-- Email input -->
             <div  class="input_width form-outline mb-4">
                 <input type="text" id="username" class="form-control" placeholder="User Name"/>
               </div>
             <div  class="input_width form-outline mb-4">
-              <input type="email" id="useremail" class="form-control" placeholder="studentemail@gmail.com"/>
+              <input type="email" id="useremail"  name="studentemail"  class="form-control" placeholder="studentemail@gmail.com"/>
             </div>
           
             <!-- Password input -->
             <div  class="input_width form-outline mb-4">
-              <input type="password" id="userpassword" class="form-control" placeholder="Password"/>
+              <input type="password" name="studentpassword" id="userpassword" class="form-control" placeholder="Password"/>
             </div>
           
             <!-- 2 column grid layout for inline styling -->
@@ -131,7 +138,10 @@
             </div>
           
             <!-- Submit button -->
-            <button  type="button" class="custom_btn">Sign in</button>
+            <div id="subbuttondiv">
+              <button id="sub" class="signbtn" type="submit">Sign in</button>
+            </div>
+         
           
             <!-- Register buttons -->
             <div class="text-center">
