--- a/templates/admindasboard.html
+++ b/templates/admindasboard.html
@@ -13,7 +13,9 @@
 
     
 
-    <link href="/assets/css/dasboard.css?v=1.18" rel="stylesheet">
+    <link href="/assets/css/dasboard.css?v=1.22" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/studentportal.css?v=1">
+    <link rel="stylesheet" href="/assets/css/studentdetails.css">
     <script src="/assets/htmx.js"></script>
 
     </head>
