--- a/assets/css/dasboard.css
+++ b/assets/css/dasboard.css
@@ -126,8 +126,8 @@
     width: 95%;
     margin: 3px 10px;
     height: 40px;
-    background-color: rgb(60, 27, 83);
-    border: 1px solid rgb(190, 179, 197);
+    background-color: rgb(37, 0, 62);
+    border: 1px solid rgb(37, 0, 62);
     border-radius: 3px;
     
 
@@ -142,14 +142,14 @@
 
 .programcard{
     text-align: center;
+    
     border: 1px solid gray;
     border-radius: 3px;
-    width: 30%;
+    width: 270px;
     height: 350px;
     margin: 10px;
     box-shadow: 10px 0 10px rgba(0, 0, 0, 0.4);
     padding: 5px;
-    display: inline-block;
     overflow-y: hidden;
     overflow-x: hidden;
 
@@ -167,7 +167,15 @@
 
 .programs{
     width: 100%;
-    height: fit-content;
+    /*height: fit-content;
+    background-color: pink;
+    display: grid;
+    gap: 1rem; */
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 5px 5px;
+    padding: 10px;
+    overflow-y: hidden;
  
 }
 
@@ -225,7 +233,7 @@
     color: purple;
 }
 
-.studentdata{
+.studentdatabtn{
     text-decoration: none;
     background-color: rgb(37, 0, 62);
     color: white;
