--- a/assets/css/studentportal.css
+++ b/assets/css/studentportal.css
@@ -26,7 +26,7 @@ header a{
 }
 
 .student_name{
-    color: white;
+    color: rgb(32, 0, 67);
     text-decoration: underline;
     display: inline-block;
 }
@@ -68,14 +68,7 @@ main{
     
     
 }
-.programs{
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-     
 
-    
-}
 
 table{
     margin-left: auto;
