--- a/templates/admindasboard.html
+++ b/templates/admindasboard.html
@@ -13,7 +13,7 @@
 
     
 
-    <link href="/assets/css/dasboard.css?v=1.22" rel="stylesheet">
+    <link href="/assets/css/dasboard.css?v=1.31" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/studentportal.css?v=1">
     <link rel="stylesheet" href="/assets/css/studentdetails.css">
     <script src="/assets/htmx.js"></script>
@@ -65,7 +65,7 @@
               </h2>
               <hr>
               <div class="tochange">
-                <div class="programs">
+                <div class="programdiv">
                     <div class="programcard">
                         <h4>Award of Certificate of Attendance in Metaphysical Sciences</h4>
                         <hr>
