--- a/templates/studentdataadmin.html
+++ b/templates/studentdataadmin.html
@@ -1,7 +1,5 @@
 
-<head>
-  <link rel="stylesheet" href="/assets/css/dasboard.css">
-</head>
+
 <h2 class="dashboard_name">
     Students
 </h2>
@@ -53,7 +51,10 @@
         <td>{{ .Paid}}</td>
         <td>{{ .Accepted}}</td>
         <td>{{ .Completed}}</td>
-        <td><a class="studentdatabtn"  href="/studentprofiledata">Details</a></td>
+        <td>
+          <div class="studentdetailsbtn">
+          <a  style="color: white;" href="/studentprofiledata">Details</a></td>
+          </div>
         
       
       </tr>
