--- a/templates/programcards.html
+++ b/templates/programcards.html
@@ -7,7 +7,7 @@
 </h2>
 <hr>
 <div class="tochange">
-  <div class="programs">
+  <div class="programdiv">
       <div class="programcard">
           <h4>Award of Certificate of Attendance in Metaphysical Sciences</h4>
           <hr>
