--- a/templates/studentdataadmin.html
+++ b/templates/studentdataadmin.html
@@ -1,66 +1,75 @@
 
+<link rel="stylesheet" href="/assets/css/dasboard.css">
 
 <h2 class="dashboard_name">
     Students
 </h2>
 <hr>
-
-
-<div class="tableheader">
-  <p class="programname">Award of Certificate of Attendance in Metaphysical Sciences</p>
-  <select class="programnamelist" id="">
-    <option value="">ACAMS</option>
-    <option value="">ACMS</option>
-    <option value="">ADMS</option>
-    <option value="">ABDMS</option>
-    <option value="">AMDMS</option>
-    <option value="">Ph.DMS</option>
+<div class="tochange">
+  <div class="tableheader">
+    <p class="programname">Award of Certificate of Attendance Cows in Metaphysical Sciences</p>
+    <select class="programnamelist" id="">
+      <option value="">ALL</option>
+      <option value="">ACAMS</option>
+      <option value="">ACMS</option>
+      <option value="">ADMS</option>
+      <option value="">ABDMS</option>
+      <option value="">AMDMS</option>
+      <option value="">Ph.DMS</option>
+      
+  
+    </select>
+  </div> 
+  <div class="programdiv">
+     
+    <div class="table_div">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Program</th>
+            <th scope="col">Accepted</th>
+            <th scope="col">Paid</th>
+            <th scope="col">Payment Method</th>
+            <th scope="col">Completed</th>
+            <th scope="col">Details</th>
+          
     
-
-  </select>
-</div> 
-<div>
-
-<div class="table_div">
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Program</th>
-        <th scope="col">Accepted</th>
-        <th scope="col">Paid</th>
-        <th scope="col">Payment Method</th>
-        <th scope="col">Completed</th>
-        <th scope="col">Details</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{ range .}}
+          <tr>
+            <th scope="row">{{ .Counter}}</th>
+            <td>{{ .First_Name}}</td>
+            <td>{{ .Last_Name}}</td>
+            <td>{{ .Email}}</td>
+            <td>{{ .Program}}</td>
+            <td>{{ .Payment_Method}}</td>
+            <td>{{ .Paid}}</td>
+            <td>{{ .Accepted}}</td>
+            <td>{{ .Completed}}</td>
+           
+    
+            <td>
+              <div hx-post ="studentprofiledata/{{ .Student_UUID}}" 
+              hx-target = "#maincontaint" class="studentdetailsbtn">
+              Details
+              </div>
+             </td>
+            
+          
+          </tr>
+    
+          {{ end }}
+          
+        </tbody>
+      </table>
+    </div>    
       
-
-      </tr>
-    </thead>
-    <tbody>
-      {{ range .}}
-      <tr>
-        <th scope="row">{{ .Counter}}</th>
-        <td>{{ .First_Name}}</td>
-        <td>{{ .Last_Name}}</td>
-        <td>{{ .Email}}</td>
-        <td>{{ .Program}}</td>
-        <td>{{ .Payment_Method}}</td>
-        <td>{{ .Paid}}</td>
-        <td>{{ .Accepted}}</td>
-        <td>{{ .Completed}}</td>
-        <td>
-          <div class="studentdetailsbtn">
-          <a  style="color: white;" href="/studentprofiledata">Details</a></td>
-          </div>
-        
-      
-      </tr>
-
-      {{ end }}
-      
-    </tbody>
-  </table>
+  </div>
 </div>
+
