--- a/templates/studentportal.html
+++ b/templates/studentportal.html
@@ -27,6 +27,7 @@
     <main>
         <div class="programs">
             {{template "acamstable"}}
+            {{template "abdmstemplate"}}
         </div>
         <div class="proceed_div">
             <div class="proceed_btn"> 
@@ -39,3 +40,4 @@
     </footer>
 </body>
 </html>
+
