--- a/assets/css/dasboard.css
+++ b/assets/css/dasboard.css
@@ -8,20 +8,32 @@
 
 
 
-.heading{
-    position: static;
-    background-color: rgb(37, 0, 62);
-    width: 100%;
-    height: 150px;
-    padding: 15px;
-    
-    
+
+
+.student_name_details{
+   
+    text-decoration: underline;
+    font-size: 1.3em;
+    padding-left: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.student_info{
+    text-decoration: underline;
 }
 
+.student_personal_information{
+    background-color: rgb(78, 50, 97);
+    color: white;
+    font-size: 1.2em;
+    padding: 5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border: 1px solid rgb(78, 50, 97);
+    border-radius: 5px;
+}
 
 .side_bar{
-    position: sticky;
-    top: 0px;
+    position: fixed;
+    top: 70px;
     left: 0;
     height: 100vh;
     width: 20%;
@@ -39,21 +51,31 @@
 
 .main{
     
-    position: relative;
+    position: fixed;
+    top: 70px;
     width: 80%;
+    height: 500px;
     box-sizing: border-box;
     margin-left: 20%;
     display: block;
+    overflow-y: scroll;
+    overflow-x: hidden;
     
     
 
 }
+
 
 .table_div{
     overflow-x: scroll;
     overflow-y: visible;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     
 }
+
+
 
 .containt{
     margin: 10px;
@@ -69,43 +91,64 @@
     
 }
 
+.heading{
+    position: sticky;
+    background-color: rgb(37, 0, 62);
+    width: 100%;
+    height: 70px;
+    padding: 15px;
+    top: 0px;  
+    display: flex;
+    justify-content: space-between;
+}
+
 
 .ucms_name{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
+    height: 50px;
+    padding: 5px;
     text-align: left;
-    height: 60%;
-    padding: 20px;
     box-sizing: border-box;
+    display: inline-block;
+    align-items: center;
 }
+
+
 
 .heading_nav{
-
-    height: 10%;
-    padding: 10px;
-    position: relative;
-    bottom: 0;
-    box-sizing: border-box;
-    margin-bottom: 0px;
-}
-
-.heading_nav_ul{
-    width: 100%;
+    width: fit-content;
+    padding: 5px;
+    height: 50px;
     list-style: none;
-    display: flex;
+    display: inline-block;
     justify-content: flex-end;
     align-items: center;
-    
-}
-.heading_nav_ul a{
-    height: 50%;
-    padding: 10px 20px;
+    color: white;    
     text-decoration: none;
-    display: flex;
-    align-items: center;
-    color: white;
+}
+
+.heading_nav div{
+    display: inline-block;
+    margin: 5px;
+    border-bottom: 1px solid rgb(151, 21, 238);
+    height: 30px;
+    padding: 5px;
+}
+
+.heading_nav div:hover{
+    border-bottom: 1px solid white;
 
 }
+
+.heading_nav a{
+    color: white;
+    text-decoration: none;
+}
+
+
+
+
 
 
 .side_ul{
@@ -167,15 +210,13 @@
 }
 
 .programdiv{
-
-    
     position: relative;
     display:inline-grid;
     grid-template-columns: auto auto auto;
     grid-gap: 5px 5px;
-    padding: 10px;
     overflow-y: hidden;
     width: 100%;
+    
  
 }
 
@@ -202,6 +243,8 @@
     font-size: 1.1em;
     text-align: left;
 }
+
+
 
 .btn2{
     background-color: white;
@@ -238,8 +281,7 @@
     color: purple;
 }
 
-.studentdetailsbtn a{
-    display: inline-block;
+.studentdetailsbtn{
     background-color: rgb(37, 0, 62);
     color: white;
     text-decoration: none;
@@ -250,8 +292,9 @@
     border-radius: 3px;
 }
 
-.studentdetailsbtn a:hover{
+.studentdetailsbtn:hover{
     color: rgb(37, 0, 62);
+    background-color: white;
     
 }
 
@@ -269,7 +312,7 @@
     justify-content: space-between;
     color: rgb(37, 0, 62);
     width: 100%;
-    height: 30%;
+    height: 50px;
     background-color: rgb(78, 50, 97);
     border: 1px solid rgb(78, 50, 97);
     border-radius: 3px;
